# cxi-pipeline-ray

./: .gitignore  README.md  pyproject.toml  setup.py
cxi_pipeline_ray/: __init__.py  cli.py  version.py
cxi_pipeline_ray/core/: __init__.py  coordinator.py  file_writer.py  peak_finding.py  reconstruction.py
cxi_pipeline_ray/utils/: __init__.py  config.py  validation.py
examples/configs/: cxi_writer_default.yaml
tests/: __init__.py
